# Gemma4-Hackathon-ShangHai

./: .gitignore
submissions/2026/track_B/LiCO直播伴侣/client/obs-blivechat-bridge/: CMakeLists.txt
submissions/2026/track_B/LiCO直播伴侣/client/obs-blivechat-bridge/cmake/macos/: Info.plist.in
submissions/2026/track_B/LiCO直播伴侣/client/obs-blivechat-bridge/src/: obs-blivechat-bridge.cpp
submissions/2026/track_C/微光Glimmer/source/: .gitignore  LICENSE  README.md  asd_ds_dataset.py  asd_eval_common.py  eval_gguf_llama_cpp.py  eval_litert_lm.py  main.py  pyproject.toml  run_train.py
submissions/2026/track_C/微光Glimmer/source/assets/readme/: architecture.mmd
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/: .gitignore  README.md
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/core/: Package.swift
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/core/Sources/GlimmerCore/: AsdBehaviorParser.swift  AsdExplanationPrompts.swift  AsdGgufContract.swift  AsdGgufPrompts.swift  AsdGgufRequest.swift  GlimmerLanguage.swift
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/core/Tests/GlimmerCoreTests/: AsdBehaviorParserTests.swift  AsdExplanationPromptsTests.swift  AsdGgufContractTests.swift  AsdGgufPromptsTests.swift  AsdGgufRequestTests.swift
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/finetune/: train.sh
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/ios/: .env.example  Package.swift  project.yml
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/ios/App/: GemmaScreenHostApp.swift  Info.plist
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/ios/Gallery/: GlimmerGalleryApp.swift  Info.plist
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/ios/MacApp/: GlimmerMacApp.swift  Info.plist
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/ios/Resources/: ModelManifest.json
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/ios/Resources/en.lproj/: InfoPlist.strings
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/ios/Resources/zh-Hans.lproj/: InfoPlist.strings
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/ios/Scripts/: build-llama-mtmd-macos-slice.sh  build-llama-mtmd-xcframework.sh  generate-xcodeproj.sh  package-mac-dmg.sh  package-mac-lite.sh  prepare-local-gguf-models.sh
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/ios/Sources/AsdGgufNative/: ASDGgufNativeRunner.mm
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/ios/Sources/GlimmerIOS/: AppLanguageStore.swift  AppRootView.swift  AsdGgufRunner.swift  AudioExtractor.swift  ExplanationChatMessage.swift  GlimmerRootView.swift  MediaDiagnostics.swift  ModelCatalog.swift  ModelDownloadManager.swift  ParityTestRunner.swift  PreprocessParityRunner.swift  ReportConversationStore.swift  ScreenWakeLock.swift  ScreeningService.swift  Theme.swift  VideoAudioPreprocessor.swift  VideoPicker.swift
submissions/2026/track_C/微光Glimmer/source/glimmer-ios/ios/Tests/GlimmerIOSTests/: GgufRuntimeLeaseTests.swift  ReportConversationStoreTests.swift
submissions/2026/track_C/微光Glimmer/source/prompts/en/: system.md  user.md
submissions/2026/track_C/微光Glimmer/source/prompts/zh/: system.md  user.md
submissions/2026/track_C/微光Glimmer/source/scripts/: eval_hidden_linear_probe.py  export_eval_waudio_textwi4_visionwi8.sh  export_loftq_wi4_noaudio.sh  run_code9_noaudio_experiment.sh  run_code9_r32_5epoch_fast.sh  run_code9_r32_5epoch_qlora_loftq.sh  run_code9_r32_ep10_qlora_loftq_waudio_wi8.sh  run_code9_r32_ep20_qlora_loftq_full.sh  run_code9_r32_ep5_f32_qlora_loftq_waudio_wi8.sh  train_code9_r32_ep10_video_f30_qlora_loftq.sh  train_zh_v2.sh
submissions/2026/track_C/微光Glimmer/source/slides/: .gitignore  README.md  glimmer-tech-route.md  glimmer.css  package-lock.json  package.json
submissions/2026/track_C/微光Glimmer/source/swift/asd-litert-cli/: Package.swift  README.md  run.sh
submissions/2026/track_C/微光Glimmer/source/swift/asd-litert-cli/Sources/ASDLiteRTCLI/: main.swift
submissions/2026/track_C/微光Glimmer/source/swift/asd-litert-cli/Sources/LiteRTLM/: Config.swift  Engine.swift  Logging.swift
(+537 files in other folders)
