[project]
name = "ft"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "datasets",
    "numpy",
    "click>=8.4.1",
    "pillow>=12.0.0",
]

[dependency-groups]
notebook = [
    "httpx[socks]>=0.28.1",
    "ipykernel>=7.2.0",
]
train-cuda = [
    "torch==2.11.0 ; sys_platform == 'linux'",
    "torchvision==0.26.0 ; sys_platform == 'linux'",
    "torchaudio==2.11.0 ; sys_platform == 'linux'",
    "transformers>=4.0 ; sys_platform == 'linux'",
    "accelerate ; sys_platform == 'linux'",
    "wandb>=0.27.0 ; sys_platform == 'linux'",
    "peft>=0.19.1 ; sys_platform == 'linux'",
    "bitsandbytes>=0.49.2 ; sys_platform == 'linux'",
]
litert-export = [
    "litert-torch>=0.9.1 ; sys_platform == 'linux'",
    "litert-lm-api>=0.13.1 ; sys_platform == 'linux'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
